# MolDockPipeRedux

./: .gitignore  README.md  pyproject.toml
Reference/: HELPER_FORCE_SYNC.py  Module 1.py  Module 2.py  Module 3 (Parallel).py  Module 3 (Single).py  Module 4a (CPU).py  Module 4b (GPU).py  Module 4b (GPU)v2.py  Module 4b (GPU)v3.py  PURGE_INCOMPLETE_VINA.py  PipelineShooter.py  VinaConfig.txt  VinaGPUConfig.txt  WARNING_PURGE_PIPELINE.py  WARNING_RESULTS_CLEAN.py
Reference/3D_Structures/: 202726.sdf  202726.smi  202774.sdf  202774.smi  202819.sdf  202819.smi  202918.sdf  202918.smi  202954.sdf  202954.smi  204395.sdf  204395.smi  204478.sdf  204478.smi  205058.sdf  205058.smi  205059.sdf  205059.smi  205081.sdf  205081.smi  205082.sdf  205082.smi  205111.sdf  205111.smi  205112.sdf  205112.smi  205327.sdf  205327.smi  205448.sdf  205448.smi  206042.sdf  206042.smi  206430.sdf  206430.smi  206957.sdf  206957.smi  207306.sdf  207306.smi  207478.sdf  207478.smi  (+591 more)
Reference/config/: config.yml  machine.yml
Reference/input/: input.csv
Reference/output/: admet.csv
Reference/receptors/: target_prepared.pdbqt
Reference/results/: leaderboard.csv  summary.csv
Reference/state/: admet_fail.list  admet_pass.list  manifest.csv
Test_Bench/: PURGE_TEST_PROJECT.py  project.yml
Test_Bench/inputs/: input.csv  receptor_prepared.pdbqt
src/moldockpipe/: __init__.py  __main__.py  (+5 more)
tests/: test_idempotency.py  test_molscrub.py  test_multidock.py  test_project.py  test_receptors.py  test_redocking.py  test_reporting.py  test_screening.py  test_ui.py  test_ui_components.py
(+30 files in other folders)
